--- a/.github/actions/install-eprosima-dependencies-windows/action.yml
+++ b/.github/actions/install-eprosima-dependencies-windows/action.yml
@@ -10,7 +10,7 @@ inputs:
     required: true
     default: 'master'
   utils_branch:
-    description: 'Branch or tag of Dev Utils repository (https://github.com/eProsima/Fdev-utils)'
+    description: 'Branch or tag of Dev Utils repository (https://github.com/eProsima/dev-utils)'
     required: true
     default: 'main'
 runs:
