fix typo in actions
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Fetch repositories
         run: |
           vcs import src <  src/dev-utils/.github/workflows/ci.repos
-          cd src/fastrtps && git checkout ${{ inputs.fastdds_branch }} && cd ../..
+          cd src/fastdds && git checkout ${{ inputs.fastdds_branch }} && cd ../..
 
       - name: Build workspace
         run: |
