--- a/cpp_utils/test/unittest/math/CMakeLists.txt
+++ b/cpp_utils/test/unittest/math/CMakeLists.txt
@@ -20,7 +20,11 @@ set(TEST_SOURCES
     )
 
 set(TEST_LIST
+        is_even
+        is_power_of_2
         fast_module
+        fast_division
+        arithmetic_progression_sum
     )
 
 set(TEST_EXTRA_LIBRARIES
