--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -280,7 +280,7 @@ jobs:
             --event-handlers=console_direct+ \
             --return-code-on-test-failure \
             --ctest-args \
-              --label-exclude xfail \
+              --label-exclude "xfail|xtsan" \
               --timeout 60
 
       - name: Upload Logs
