--- a/cpp_utils/test/unittest/CMakeLists.txt
+++ b/cpp_utils/test/unittest/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(macros)
 add_subdirectory(math)
 add_subdirectory(memory)
 add_subdirectory(return_code)
+add_subdirectory(testing)
 add_subdirectory(thread_pool)
 add_subdirectory(time)
 add_subdirectory(utils)
