--- a/cpp_utils/test/unittest/testing/CMakeLists.txt
+++ b/cpp_utils/test/unittest/testing/CMakeLists.txt
@@ -40,6 +40,7 @@ set(TEST_LIST
 set(TEST_EXTRA_LIBRARIES
         fastcdr
         fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
 add_unittest_executable(
