Add python linter to CI check
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/actions/install-python-packages/action.yml
+++ b/.github/actions/install-python-packages/action.yml
@@ -19,5 +19,7 @@ runs:
           setuptools \
           gcovr==5.0 \
           pyyaml \
-          jsonschema
+          jsonschema \
+          flake8 \
+          flake8-quotes
       shell: bash
