--- a/cpp_utils/test/unittest/math/CMakeLists.txt
+++ b/cpp_utils/test/unittest/math/CMakeLists.txt
@@ -16,7 +16,7 @@ set(TEST_NAME mathTest)
 
 set(TEST_SOURCES
         mathTest.cpp
-        ${PROJECT_SOURCE_DIR}/src/cpp/math/math.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/math/math_extension.cpp
     )
 
 set(TEST_LIST
