refactor configurations in workflows
Signed-off-by: jparisu <javierparis@eprosima.com>

--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Fetch repositories
         run: |
-          vcs import src <  src/dev-utils/.github/workflows/ci.repos
+          vcs import src <  src/dev-utils/.github/workflows/configurations/ci.repos
           cd src/fastdds && git checkout ${{ inputs.fastdds_branch }} && cd ../..
 
       - name: Build workspace
