--- a/cpp_utils/test/unittest/types/CMakeLists.txt
+++ b/cpp_utils/test/unittest/types/CMakeLists.txt
@@ -66,6 +66,7 @@ set(TEST_LIST
 set(TEST_EXTRA_LIBRARIES
         fastcdr
         fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
 set(TEST_NEEDED_SOURCES
@@ -102,6 +103,7 @@ set(TEST_LIST
 set(TEST_EXTRA_LIBRARIES
         fastcdr
         fastrtps
+        $<$<BOOL:${WIN32}>:iphlpapi$<SEMICOLON>Shlwapi>
     )
 
 set(TEST_NEEDED_SOURCES
