--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -404,13 +404,10 @@ jobs:
 
       - name: Get build eProsima dependencies Job Id
         shell: pwsh
-        # jq seems to have a bug, thus using -b is the option to fix it https://github.com/stedolan/jq/issues/1870
         run: |
           $RUNS_URI = '${{ github.api_url }}/repos/${{ github.repository }}/actions/workflows/build_dependencies.yml/runs';
-          Invoke-RestMethod -Uri $RUNS_URI -OutFile content.json;
-          $job_id = jq -c -b '.workflow_runs[]  | select(.status == \"completed\") | .id' .\content.json | select -first 1;
-          echo "fastdds_job_id=$job_id" >> $env:GITHUB_ENV;
-
+          ((iwr $RUNS_URI).Content | ConvertFrom-Json).workflow_runs | ? status -eq 'completed' |
+           select -first 1 id | % { "fastdds_job_id=$_" } | Out-File $env:GITHUB_ENV -Append
 
       - name: Download eProsima dependencies
         uses: dawidd6/action-download-artifact@v2
