--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -406,9 +406,8 @@ jobs:
         shell: pwsh
         run: |
           $RUNS_URI = '${{ github.api_url }}/repos/${{ github.repository }}/actions/workflows/build_dependencies.yml/runs';
-          Invoke-RestMethod -Uri $RUNS_URI -OutFile content.json;
-          $job_id = jq -c '.workflow_runs[]  | select(.status == \"completed\") | .id' .\content.json | select -first 1;
-          echo "fastdds_job_id=$job_id" >> $env:GITHUB_ENV;
+          ((iwr $RUNS_URI).Content | ConvertFrom-Json).workflow_runs | ? status -eq 'completed' |
+           select -first 1 id | % { "fastdds_job_id=" + $_.id } | Out-File $env:GITHUB_ENV -Append
 
       - name: Download eProsima dependencies
         uses: dawidd6/action-download-artifact@v2
