--- a/cpp_utils/test/unittest/testing/CMakeLists.txt
+++ b/cpp_utils/test/unittest/testing/CMakeLists.txt
@@ -22,7 +22,7 @@ set(TEST_SOURCES
         ${PROJECT_SOURCE_DIR}/src/cpp/testing/LogChecker.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/exception/Exception.cpp
         ${PROJECT_SOURCE_DIR}/src/cpp/utils.cpp
-        ${PROJECT_SOURCE_DIR}/src/cpp/Formatter.cpp
+        ${PROJECT_SOURCE_DIR}/src/cpp/format/Formatter.cpp
     )
 
 set(TEST_LIST
