Fix flake8 version
Signed-off-by: Juan López Fernández <juanlopez@eprosima.com>

--- a/.github/actions/install-python-packages/action.yml
+++ b/.github/actions/install-python-packages/action.yml
@@ -20,6 +20,6 @@ runs:
           gcovr==5.0 \
           pyyaml \
           jsonschema \
-          flake8 \
+          flake8==5.0.4 \
           flake8-quotes
       shell: bash
